baremetal/sys.fabrikam.pl/dex/oauth2-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "sys-fabrikam-pl-letsencrypt-prod" # use production cert issuer for sys.fabrikam.pl
    external-dns: sys.fabrikam.pl  # use external dns for sys.fabrikam.pl
  name: oauth2-proxy
  namespace: dex
spec:
  ingressClassName: sys-fab-pl-ing-ctrl # use specific Ingress Controller
  tls:
  - hosts:
    - dashboard.sys.fabrikam.pl
    secretName: dashboard.sys.fabrikam.pl # this will be the name of created certificate 
  rules:
  - host: dashboard.sys.fabrikam.pl
    http:
      paths:
      - path: "/oauth2"
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 8080
